# influxio

./: .dockerignore  .gitignore  CHANGES.md  CHANGES.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: oci.yml  tests.yml
doc/: backlog.md  backlog.rst  conf.py  development.md  development.rst  index.md
examples/: export_lineprotocol.py  export_sqlalchemy.py
influxio/: adapter.py  cli.py  core.py  io.py  model.py  testdata.py
influxio/util/: common.py  report.py
release/oci/: Dockerfile  selftest.sh
tests/: conftest.py  test_adapter.py  test_cli.py  test_examples.py  test_export.py  test_import.py  test_load.py  test_model.py  test_write.py
tests/testdata/: README.md  README.rst  air-sensor-data-irregular.lp  industrial.lp
