[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "influxio"
description = "Import and export data into/from InfluxDB"
readme = "README.md"
keywords = [
  "export",
  "ilp",
  "import",
  "influx",
  "influxdb",
  "line-protocol",
  "lineprotocol",
  "rdbms",
  "sql",
  "sqlalchemy",
  "timeseries",
  "timeseries-data",
  "transfer",
]
authors = [
  { name = "Andreas Motl", email = "andreas.motl@panodata.org" },
  { name = "Richard Pobering", email = "richard.pobering@panodata.org" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: File Formats",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Recovery Tools",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "click<9",
  "colorama<1",
  "cratedb-toolkit",
  "dask[dataframe]>=2020",
  "fsspec[http,s3]",
  "importlib-metadata; python_version<='3.9'",
  "influx-line==1.0.0",
  "influxdb-client[ciso]<2",
  "line-protocol-parser<2",
  "pandas<2.4",
  "polars<2",
  "psycopg2-binary<3",
  "pueblo>=0.0.7",
  "pyarrow; python_version<='3.9'",
  "sqlalchemy-cratedb>=0.37,<1",
  "sqlalchemy-utils<0.43",
  "universal-pathlib<0.4",
  "yarl<2",
]
optional-dependencies.develop = [
  "black<27",
  "mypy<1.20",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "sphinx-autobuild",
  "validate-pyproject<1",
]
optional-dependencies.docs = [
  "furo",
  "myst-parser[linkify]>=0.18,<6",
  "sphinx<10",
  "sphinx-copybutton",
  "sphinx-design-elements<1",
  "sphinxcontrib-mermaid<3",
  "sphinxext-opengraph<1",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.test = [
  "pytest<10",
  "pytest-cov<8",
]
urls.changelog = "https://github.com/daq-tools/influxio/blob/main/CHANGES.rst"
urls.documentation = "https://github.com/daq-tools/influxio"
urls.homepage = "https://github.com/daq-tools/influxio"
urls.repository = "https://github.com/daq-tools/influxio"
scripts.influxio = "influxio.cli:cli"

[tool.setuptools]
packages.find.namespaces = false

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.select = [
  # Builtins
  "A",
  # Bugbear
  "B",
  # comprehensions
  "C4",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # pandas-vet
  "PD",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  "W",
  # flake8-2020
  "YTT",
]
lint.extend-ignore = [
  # zip() without an explicit strict= parameter
  "B905",
  # Unnecessary variable assignment before `return` statement
  "RET504",
  # Unnecessary `elif` after `return` statement
  "RET505",
]
lint.per-file-ignores."doc/conf.py" = [ "A001", "ERA001" ]
lint.per-file-ignores."influxio/util/report.py" = [ "T201" ]
lint.per-file-ignores."tests/*" = [ "S101" ]  # Use of `assert` detected

[tool.mypy]
packages = [ "influxio" ]
install_types = true
ignore_missing_imports = true
implicit_optional = true
non_interactive = true

[tool.pytest]
ini_options.addopts = "-rA --verbosity=3 --cov --cov-report=term-missing --cov-report=xml"
ini_options.minversion = "2.0"
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
ini_options.log_format = "%(asctime)-15s [%(name)-24s] %(levelname)-8s: %(message)s"
ini_options.testpaths = [
  "influxio",
  "tests",
]
ini_options.xfail_strict = true
ini_options.markers = [
  "examples",
  "slow",
]

[tool.coverage]
run.branch = false
run.omit = [
  "tests/*",
]
run.source = [ "influxio" ]
report.fail_under = 0
report.show_missing = true

[tool.poe]
# ===================
# Tasks configuration
# ===================
tasks.check = [
  "lint",
  "test",
]
tasks.docs-autobuild = [
  { cmd = "sphinx-autobuild --open-browser --watch influxio doc doc/_build" },
]
tasks.docs-html = [
  { cmd = "sphinx-build -W --keep-going doc doc/_build" },
]
tasks.docs-linkcheck = [
  { cmd = "sphinx-build -W --keep-going -b linkcheck doc doc/_build" },
]
tasks.format = [
  { cmd = "black ." },
  # Configure Ruff not to auto-fix (remove!) unused variables (F841) and `print` statements (T201).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff check ." },
  { cmd = "black --check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  # { cmd = "mypy" },
]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*" },
]
tasks.test = { cmd = "pytest" }

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"
